# hello-rust

./: .gitignore  Makefile  Readme.md
app/: Cargo.toml
enclave/: Cargo.toml  Makefile
enclave/src/: lib.rs
